--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 </head>
 <body>
-  <h1>Quiz</h1>
+  <h1>Teknik Quiz</h1>
 
-  <h2>Vad är detta?</h2>
+  <h2 id="froga">Vad heter denna konsol?</h2>
 
   <div id="bild" class="bild0 storlek">
     
@@ -20,12 +20,11 @@
     <div class="form-group">
       <label for="svar">Svar</label>
       <input type="text" class="form-control" id="answer" placeholder="Skriv ditt svar">
-      <small id="help" class="form-text text-muted">Skriv endast med små bokstäver</small>
+      <small id="help" class="form-text text-muted">Skriv endast med små bokstäver och UTAN mellanslag</small>
     </div>
     <button class="btn btn-success" type="button" onclick="checkAnswer()">Svara</button>
   </form>
   <h2 id="visa">Dina antal rätt: 0</h2>
-
 
   <h3 id="kvar">Antal Frågor kvar: 10</h3>
 
