Gjort texten Teknik Quiz tjock
Gjort texten Teknik Quiz tjock

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Formulär</title>
+  <title>Teknik Quiz</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
 </head>
 <body>
-  <h1>Teknik Quiz</h1>
+  <h1 class="titel">Teknik Quiz</h1>
 
   <h2 id="froga">Vad heter denna konsol?</h2>
 
