--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-  <h1 class="titel">Teknik Quiz</h1>
+  <h1 class="titel" id="titel">Teknik Quiz</h1>
 
   <h2 id="froga">Vad heter denna konsol?</h2>
 
